--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -3,20 +3,20 @@
 
 <head>
 	<link rel="stylesheet" href="style.css">
-	<!-- <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" /> -->
-	<script src="popup.js" charset="utf-8"></script>
+	<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+	
 	<script src="jquery.min.js" charset="utf-8"></script>
-	<script src="firebaseui.js" charset="utf-8"></script>
+	
 </head>
 
 <body>
 	<div class="header">
 			<h1>GitLance</h1>
 	</div>
-	<!-- <div id="firebaseui-auth-container"></div>
-	<div id="loader">Loading...</div> -->
+	<div id="firebaseui-auth-container"></div>
+	<div id="loader">Loading...</div>
 
-  <label>Username</label>
+  <!-- <label>Username</label>
 	<br>
 	<input type="text" name="" value="">
 	<br>
@@ -26,7 +26,11 @@
 	<div class="footer">
 		<button type="button" name="button">Login</button>
 		<button type="button" name="button">Forgot password</button>
-	</div>
+	</div> -->
+	<script src="firebase.min.js"></script>
+	<script src="firebaseauth.min.js"></script>
+	<script src="firebaseui.js" charset="utf-8"></script>
+	<script src="popup.js" charset="utf-8"></script>
 </body>
 
 </html>
